tests/machine/x/ocaml/test_block.error
File "/tmp/TestOCamlCompiler_VMValid_Goldentest_block397238571/001/test_block.ml", line 24, characters 2-15:
24 |   print_endline "ok";
       ^^^^^^^^^^^^^
Error: Syntax error
